png loader + basic layout + basic navbar style

--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -1,2 +1,8 @@
+@import 'base/_reset'
+@import 'base/_colors'
+@import 'base/_typography'
+@import 'components/layout'
+@import 'components/navbar'
+
 body
     background: #eee
