basic player style

--- a/src/style/base/_colors.sass
+++ b/src/style/base/_colors.sass
@@ -4,6 +4,6 @@ $shark: #2b3036
 
 $primary: $shark
 $light: $white
-$dim-ligt: rgba($white, .6)
+$dim-light: rgba($white, .6)
 $accent: $bright-turquoise
 $dim-accent: rgba($bright-turquoise, .3)
