--- a/src/style/base/_typography.sass
+++ b/src/style/base/_typography.sass
@@ -21,3 +21,11 @@ body
 header
     +small-body
     font-weight: 300
+
+footer
+    line-height: 6rem
+    .title
+        +headline
+        text-align: center
+    .timer span
+        color: $dim-light
