--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -3,6 +3,7 @@
 @import 'base/_typography'
 @import 'components/layout'
 @import 'components/navbar'
+@import 'components/player'
 
 body
     background: #eee
