--- a/src/style/components/layout.sass
+++ b/src/style/components/layout.sass
@@ -5,10 +5,20 @@ body,
     position: relative
     width: 100%
     height: 100%
+    background: $primary
 
 header
     position: relative
     width: 100%
     height: 3.125rem
+    >*
+        position: relative
+
+footer
+    position: fixed
+    bottom: 0
+    left: 0
+    width: 100%
+    height: 6rem
     >*
         position: relative
